--- a/index.html
+++ b/index.html
@@ -10,7 +10,65 @@
 
     <!--Intestazione: Title - Logo - Menu -->
     <header>
+      <div class="container">
 
+        <div class="header-nav clearfix">
+
+          <div class="header-nav-logo float-left">
+            <img src="img/logo.svg" alt="Logo Fluentify">
+          </div>
+          <div class="header-nav-menu-center float-left">
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">
+                    Il metodo
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    La tecnologia
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Real-life english
+                  </a>
+                </li>
+                <li>
+                  <a href="#">
+                    Soluzioni aziendali
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+          <div class="header-nav-menu-right float-left">
+            <ul>
+              <li>
+                <a href="#">
+                  Diventa un tutor
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Login
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  Struttura un piano
+                </a>
+              </li>
+            </ul>
+          </div>
+
+        </div>
+
+        <div class="jumbotron">
+
+        </div>
+      </div>
     </header>
     <!-- /Intestazione -->
 
