--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" class="btn btn-nocolor">
                   Login
                 </a>
               </li>
               <li>
-                <a href="#">
+                <a href="#" class="btn btn-green">
                   Struttura un piano
                 </a>
               </li>
@@ -66,6 +66,13 @@
         </div>
 
         <div class="jumbotron">
+
+          <div class="title">
+            <h1>Scegli l'inglese studiato per i professionisti</h1>
+            <a href="#" class="btn btn-green btn-big">
+              Struttura un piano
+            </a>
+          </div>
 
         </div>
       </div>
