--- a/index.html
+++ b/index.html
@@ -85,6 +85,21 @@
     <!-- Maincorp: -->
     <main>
 
+      <!-- Slogan -->
+      <section class="box-slogan">
+        <div class="container">
+          <div class="slogan">
+            <h2>Le scuole di lingua tradizionali non sono efficaci</h2>
+            <p>Solo un corso incentrato sulla Fluency pu&ograve; portare ad una soluzione definitiva concreta</p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Piano formativo -->
+      <section>
+
+      </section>
+
     </main>
     <!-- /Maincorp -->
 
