--- a/index.html
+++ b/index.html
@@ -96,9 +96,58 @@
       </section>
 
       <!-- Piano formativo -->
-      <section>
+      <section class="study-plan">
+        <div class="container clearfix">
 
+          <div class="info-box float-left">
+            <div class="image-profile"></div>
+            <div class="info-box-title">
+              <h2>Piano formativo configurato sul proprio livello</h2>
+            </div>
+            <hr>
+            <p>Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+          </div>
+          <div class="info-box float-left">
+            <div class="image-computer"></div>
+            <div class="info-box-title">
+              <h2>Affiancamento costante del tutor</h2>
+            </div>
+            <hr>
+            <p>Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
+          </div>
+          <div class="info-box float-left">
+            <div class="image-doc"></div>
+            <div class="info-box-title">
+              <h2>Monitora i tuoi progressi costantemente</h2>
+            </div>
+            <hr>
+            <p>Controlla i tuoi progressi con i dati eleborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
+          </div>
+
+        </div>
       </section>
+
+      <hr>
+
+      <section class="level">
+        <div class="container clearfix">
+
+          <div class="level-box float-left">
+            <div class="image-mountain"></div>
+          </div>
+
+          <div class="level-box float-left">
+            <div class="info-level">
+              <div class="level-title">
+                <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+                <a href="#">Scopri il nostro test di placement</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
     </main>
     <!-- /Maincorp -->
