--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
       <hr>
 
+      <!-- livello di studio -->
       <section class="level">
         <div class="container clearfix">
 
@@ -148,6 +149,18 @@
         </div>
       </section>
 
+      <!-- struttura il piano -->
+      <section class="view-plan">
+        <div class="container clearfix">
+          <div class="view-plan-title float-left">
+            <h2>Sruttura un piano</h2>
+          </div>
+          <div class="view-plan-select float-left">
+
+          </div>
+        </div>
+
+      </section>
 
     </main>
     <!-- /Maincorp -->
