--- a/index.html
+++ b/index.html
@@ -156,7 +156,11 @@
             <h2>Sruttura un piano</h2>
           </div>
           <div class="view-plan-select float-left">
-
+            <span>Sono</span>
+            <span class="select">
+              Seleziona
+            </span>
+            <a href="#" class="btn btn-green btn-big">Visualizza il tuo piano</a>
           </div>
         </div>
 
@@ -165,7 +169,9 @@
     </main>
     <!-- /Maincorp -->
 
-
+    <div class="fixed">
+      <a href="#" class="btn btn-green help">Help</a>
+    </div>
 
 
     <!-- Footer -->
